[feature] collection and sort utility